export conditional formatting to xlsx, fdo#48360

This is not yet perfect but should export already the conditional
formatting and a great deal of the styles to xlsx

Still missing:

font export
number format export
some advanced conditional formats features